--- a/pom.xml
+++ b/pom.xml
@@ -28,6 +28,15 @@
     </developer>
   </developers>
 
+  <dependencies>
+    <dependency>
+      <groupId>org.clojure</groupId>
+      <artifactId>clojurescript</artifactId>
+      <version>0.0-2080</version>
+      <scope>provided</scope>
+    </dependency>
+  </dependencies>
+
   <scm>
     <connection>scm:git:git://github.com/clojure/core.logic.git</connection>
     <developerConnection>scm:git:git://github.com/clojure/core.logic.git</developerConnection>
