--- a/pom.xml
+++ b/pom.xml
@@ -31,8 +31,13 @@
   <dependencies>
     <dependency>
       <groupId>org.clojure</groupId>
+      <artifactId>clojure</artifactId>
+      <version>1.5.1</version>
+    </dependency>
+    <dependency>
+      <groupId>org.clojure</groupId>
       <artifactId>clojurescript</artifactId>
-      <version>0.0-2080</version>
+      <version>0.0-2138</version>
       <scope>provided</scope>
     </dependency>
   </dependencies>
