--- a/pom.xml
+++ b/pom.xml
@@ -3,7 +3,7 @@
   <modelVersion>4.0.0</modelVersion>
   <artifactId>core.logic</artifactId>
   <version>0.8.12-SNAPSHOT</version>
-  <name>${artifactId}</name>
+  <name>core.logic</name>
   <description>A logic/relational programming library for Clojure</description>
 
   <licenses>
